Make sure that the spinner is only animated when visible
refs #8369

--- a/public/css/icinga/forms.less
+++ b/public/css/icinga/forms.less
@@ -117,11 +117,14 @@ div.spinner {
 
     &.active {
       visibility: visible;
+
+      &:before {
+        .animate(spin 2s infinite linear);
+      }
     }
 
     &:before {
       margin: 0; // Disables wobbling
-      .animate(spin 2s infinite linear);
     }
   }
 }
